<resources>
    <string name="app_name">PalindromeApp</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email_email_com">email@email.com</string>
    <string name="no_data">No users available</string>
</resources>