<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity"
    android:background="@drawable/background">


    <FrameLayout
        android:id="@+id/imageFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"
            android:alpha="0.3"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_add_photo"
            android:layout_gravity="center" />
    </FrameLayout>


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:paddingVertical="10dp"
        android:paddingHorizontal="14dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/palindromeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageFrame"
        android:background="@drawable/rounded"/>

    <EditText
        android:id="@+id/palindromeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/palindrome"
        android:paddingVertical="10dp"
        android:paddingHorizontal="14dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintBottom_toTopOf="@id/checkBtn"
        android:background="@drawable/rounded"/>

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="48dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/palindromeEditText"
        android:background="@drawable/rounded" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBtn"
        android:background="@drawable/rounded" />



</androidx.constraintlayout.widget.ConstraintLayout>